@@ -1,4 +1,4 @@
-package jvm;
+package com.jvm01;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -6,23 +6,16 @@ import java.io.FileInputStream;
 import java.lang.reflect.Method;
 
 /**
- * 自定义类加载器
- * <p>
- * 1、error: 自己用网上工具把Hello.class的二进制BASE64编码
- * 执行报错：Exception in thread "main" java.lang.ClassFormatError: Incompatible magic value 1667327589 in class file jvm/Hello
- * TODO 麻烦助教老师解释一下原因
- * </p>
- *
- * <p>
- * 2、直接根据路径读取二进制字节码
- * </p>
+ * 自定义类加载器，加载Hello.xlass
  */
-public class HelloClassLoaderByUrl extends ClassLoader {
+public class XClassLoader extends ClassLoader {
 
     private String path;
+    private String suffix;
 
-    public HelloClassLoaderByUrl(String classPath) {
+    public XClassLoader(String classPath, String suffix) {
         this.path = classPath;
+        this.suffix = suffix;
     }
 
     @Override
@@ -37,9 +30,10 @@ public class HelloClassLoaderByUrl extends ClassLoader {
     }
 
     private byte[] getData() {
-        File file = new File(path);
+        String resourcePath = path.replace(".", "/");
+        File file = new File(resourcePath + suffix);
         if (!file.exists()) {
-            System.out.println("【" + path + "】: path is not exists!");
+            System.out.println("【" + resourcePath + suffix + "】: file is not exists!");
             return null;
         }
         FileInputStream in = null;
@@ -52,7 +46,8 @@ public class HelloClassLoaderByUrl extends ClassLoader {
             while ((size = in.read(buffer)) > 0) {
                 out.write(buffer, 0, size);
             }
-            return out.toByteArray();
+            byte[] result = out.toByteArray();
+            return decode(result);
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
@@ -71,20 +66,30 @@ public class HelloClassLoaderByUrl extends ClassLoader {
         return null;
     }
 
-    public static void main(String[] args) throws Exception {
-        String path = "F:\\java学习\\jvm\\src\\jvm\\MyHello.class";
-        HelloClassLoaderByUrl classloader = new HelloClassLoaderByUrl(path);
-        Class<?> classLoad = classloader.findClass("jvm.MyHello");
-        if (classLoad == null) {
-            return;
+    /**
+     * Hello.class 文件所有字节（x=255-x）处理后的文件
+     *
+     * @param byteArray
+     * @return
+     */
+    private static byte[] decode(byte[] byteArray) {
+        byte[] targetArray = new byte[byteArray.length];
+        for (int i = 0; i < byteArray.length; i++) {
+            targetArray[i] = (byte) (255 - byteArray[i]);
         }
+        return targetArray;
+    }
 
-        //初始化类
-        Object obj = classLoad.newInstance();
-
-        //通过反射调用main方法
-        Method method = classLoad.getDeclaredMethod("main", String[].class);
-        method.invoke(obj, (Object) new String[]{});
+    public static void main(String[] args) throws Exception {
+        String path = "F:\\java学习\\jvm\\src\\com\\jvm01\\Hello";
+        XClassLoader classloader = new XClassLoader(path, ".xlass");
+        Class<?> clazz = classloader.findClass("Hello");
+        for (Method m : clazz.getDeclaredMethods()) {
+            System.out.println(clazz.getSimpleName() + "." + m.getName());
+        }
+        Object instance = clazz.getDeclaredConstructor().newInstance();
+        Method method = clazz.getMethod("hello");
+        method.invoke(instance);
     }
 
 }
